--- a/app/views/bookmarks.erb
+++ b/app/views/bookmarks.erb
@@ -2,4 +2,8 @@
   <% @bookmarks.each do |bookmark| %>
     <li><%= bookmark %></li>
   <% end %>
+
+  <form action="/create" method='post'>
+    <input type="submit" value="Add link">
+  </form>
 </ul>
