refactor step 10, all tests passing

--- a/app/views/bookmarks.erb
+++ b/app/views/bookmarks.erb
@@ -3,7 +3,7 @@
     <li><%= bookmark %></li>
   <% end %>
 
-  <form action="/create" method='post'>
+  <form action="/create" method='get'>
     <input type="submit" value="Add link">
   </form>
 </ul>
