--- a/app/views/create.erb
+++ b/app/views/create.erb
@@ -1,4 +1,4 @@
-<form action='/bookmarks' method='get'>
+<form action='/create' method='post'>
   Add url here:
   <input type="text" name="URL">
   <input type="submit" value="Submit">
