--- a/app/views/create.erb
+++ b/app/views/create.erb
@@ -1,5 +1,7 @@
-<form action='/create' method='post'>
-  Add url here:
-  <input type="text" name="URL">
-  <input type="submit" value="Submit">
-</form>
+<div>
+  <form action='/create' method='post'>
+    <label for="URL"> Add new url here:</label>
+    <input type="text" name="URL">
+    <input type="submit" value="Submit">
+  </form>
+</div>
