--- a/app/views/create.erb
+++ b/app/views/create.erb
@@ -1,7 +1,8 @@
 <div>
   <form action='/create' method='post'>
-    <label for="URL"> Add new url here:</label>
+    <label for="URL"> Add title and url here:</label>
     <input type="text" name="URL">
+    <input type="text" name="title">
     <input type="submit" value="Submit">
   </form>
 </div>
